// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: show bar 1`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: foo → *
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}},
         2. filter {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   id: 1,
                   current: foo | 1 | 11
                 }
              }}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. filter {{}}
                 ]
                [(empty list)]}
           ]}
      ]},
    *  Graph {
       Seq [
         1. compute {{}},
         2. run {{}}
       ]
      [(empty list)]}
  ]}"
`;

exports[`graphite: show bar 2`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: foo → *
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}},
         2. filter {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   id: 1,
                   current: foo | 1 | 11
                 }
              }}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. filter {{}}
                 ]
                [(empty list)]}
           ]}
      ]}
  ]}"
`;

exports[`graphite: show foo 1`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: foo
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. emit {{
                 fullName: foo → *
              }}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. filter {{}}
                 ]
                 Next [
                   *  Graph {
                      Seq [
                        1. filter {{}},
                        2. update {{
                           store: {
                             id: 1,
                             current: foo | 1 | 11 | 101
                           }
                        }}
                      ]
                      Next [
                        *  Graph {
                           Seq [
                             1. compute {{}},
                             2. filter {{}}
                           ]
                          [(empty list)]}
                     ]}
                ]}
           ]}
      ]}
  ]}"
`;

exports[`graphite: show store1 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         id: 1,
         current: foo | 1 | 11 | 101
       }
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}},
         2. filter {{}}
       ]
      [(empty list)]}
  ]}"
`;

exports[`graphite: show store2 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         id: 2,
         current: 3
       }
    }}
  ]
  [(empty list)]}"
`;

exports[`showcase: event foo 1`] = `
"Graph {
  Seq [
    1. emit {{
       fullName: foo
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}},
         2. filter {{}}
       ]
       Next [
         *  Graph {
            Seq [
              1. filter {{}},
              2. update {{
                 store: {
                   id: 3,
                   current: 3
                 }
              }}
            ]
            Next [
              *  Graph {
                 Seq [
                   1. compute {{}},
                   2. filter {{}},
                   3. run {{}}
                 ]
                [(empty list)]}
           ]}
      ]}
  ]}"
`;

exports[`showcase: mapped 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         id: 6,
         current: 1
       }
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}},
         2. run {{}}
       ]
      [(empty list)]}
  ]}"
`;

exports[`showcase: store a 1`] = `
"Graph {
  Seq [
    1. filter {{}},
    2. update {{
       store: {
         id: 3,
         current: 3
       }
    }}
  ]
  Next [
    *  Graph {
       Seq [
         1. compute {{}},
         2. filter {{}},
         3. run {{}}
       ]
      [(empty list)]}
  ]}"
`;
